# ansys-vrxperience-ros2

./: README.md
.github/workflows/: ros2-ci.yaml
vrxperience_bridge/: CHANGELOG.rst  CMakeLists.txt  package.xml
vrxperience_bridge/include/vrxperience_bridge/: sim_data_receiver.hpp  sim_data_sender.hpp
vrxperience_bridge/launch/: bridge.launch
vrxperience_bridge/res/: DDS_Octets.idl  IndyDS.idl  IndyDS_CabToModelCorrective.idl  IndyDS_CabToSteeringCorrective.idl  IndyDS_GPS.idl  IndyDS_LaserMeter.idl  IndyDS_RoadLinesPolynoms.idl  IndyDS_SensorMovableTargets.idl  IndyDS_SensorMovableTargetsBoundingBoxes.idl  IndyDS_VehicleOutput.idl
vrxperience_bridge/src/: recv_dds_done.cpp  recv_gps.cpp  recv_laser_meter.cpp  recv_movable_targets.cpp  recv_movable_targets_bounding_boxes.cpp  recv_road_lines_polynoms.cpp  recv_vehicle_output.cpp  send_cab_to_model_corrective.cpp  send_cab_to_steering_corrective.cpp  send_dds_done_reply.cpp
vrxperience_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
vrxperience_msgs/msg/: CabToModelCorrective.msg  CabToSteeringCorrective.msg  GPS.msg  LaserMeter.msg  LaserMeterPoint.msg  MovableTarget.msg  MovableTargetBoundingBox.msg  MovableTargets.msg  MovableTargetsBoundingBoxes.msg  RoadLinePolynom.msg  RoadLinesPolynoms.msg  VehicleOutput.msg
