<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vrxperience_bridge</name>
  <version>1.0.0</version>
  <description>Bridge between the simulator and ROS 2</description>
  <maintainer email="gotlib.adam+dev@gmail.com">Adam Gotlib</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/autowarefoundation/ansys-vrxperience-ros2</url>
  <author email="gotlib.adam+dev@gmail.com">Adam Gotlib</author>
  <author>Trent Weiss</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch_xml</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>vrxperience_msgs</depend>
  <depend>cyclonedds</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
